--- a/kubernetes/apps/default/mastodon/secret.sops.yaml
+++ b/kubernetes/apps/default/mastodon/secret.sops.yaml
@@ -1,19 +1,39 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mastodon-secret
-  namespace: default
+    name: mastodon-secret
+    namespace: default
 type: Opaque
 stringData:
-  ## secrets
-  SECRET_KEY_BASE: ""
-  OTP_SECRET: ""
-  VAPID_PRIVATE_KEY: ""
-  VAPID_PUBLIC_KEY: ""
-  ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY: ""
-  ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY: ""
-  ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT: ""
-  ## Postgres
-  password: 3baabc31cf7ad872674ad3f29263e8b5
-  ## Redis
-  redis-password: ce76130418a3457ecd5f86f7fd962daf
+    #ENC[AES256_GCM,data:WPKdMxuSDM8Z,iv:CLTkF1PzXSKKS0WbUfrlmvNGkPcilPxE5OSKmJE5PWU=,tag:qYaTNGWN23MLZlcT3moZ3w==,type:comment]
+    SECRET_KEY_BASE: ENC[AES256_GCM,data:OLEBE+gD/ihlWPX67RH/OHdFPxbIo49CA6DbL2U58S/mLvQWrWuT60+eT18uTxUmgQtMcPC7Io69uInMGwKJujSUDkZki34JDIg4yBbtuwQgxT8aAdgSQm4QIVKC2UEyzzOMrooa8ZYfZd8H+NnJ5ZLFGXr6b4f7hhGFvWDCYFU=,iv:DVfkmEOBitaUrbysi0wC4fw1Cw+tnECgbw9EbBYsDJk=,tag:H01kOgy5SnjHqjUY4RnsnQ==,type:str]
+    OTP_SECRET: ENC[AES256_GCM,data:UYygB20LIi1VcF1bn6tegHQliceJIAKy4Icuvm/quxo3VJq+5Dt+11qsCZD3OEhzFr849OeQVf4ib18IT3LUdvbm+uWsmyrcC3TctOItd1Dry0vLkW9DVNZ0DnjZbzFvrwQ1Z8MmrIEIpA5M1Jvpo3wR5NxoWy+LlvdrrB5MCgQ=,iv:3z0KaC7P2f7GLqLJL4irwM3Dpn1uQwMRnJWp1g3XDc8=,tag:cpWELCoFv2rDOhc1L9CmjQ==,type:str]
+    ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY: ENC[AES256_GCM,data:7PU9e/ZQuJyVSj2m4xYFN6+nouDibO2/Ee1Jy4GQBHU=,iv:ft4u9RBZgYkqXA71TjmA8apBp9klypm4+fuPOIcVyEw=,tag:12UQRwUfkIhz0KzuHCI/Fg==,type:str]
+    ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT: ENC[AES256_GCM,data:exzW2Yfivcn/97pLgofwW6r1IyZiO1Ht+Npj+LaEhLs=,iv:pIcCa0Lc/Zgy1S2aT2CS2wSkgYCZ/5tUrwmEmEaQhbI=,tag:3kEEpZXX6TJL/jvikrz39A==,type:str]
+    ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY: ENC[AES256_GCM,data:Q63Nk2v5xsL3U2VN4IRDEGvWbTptKNnCvlbHx6kpq8M=,iv:Bb752OmCoEm2wWbGaVnYSrntMT8XCRieE4zREl99n6c=,tag:iEjtta+sBtBDaSLzuyLjNw==,type:str]
+    VAPID_PRIVATE_KEY: ENC[AES256_GCM,data:fXgALTT7R03LruA926prfnCaCEpGGBBdfmq1Ob/LNrXtSHC3cWSguis/KP8=,iv:BOvgEgiKQay/Fq17LUyxutqvh8UvKUiSfT7hfjb2qy8=,tag:uzWCMb5hcDPaQfRnT9yXdQ==,type:str]
+    VAPID_PUBLIC_KEY: ENC[AES256_GCM,data:n7r3UlhtlueZMOGorecbtrUrZL/R7XavqqjVuXDuG0MCcSsvrcB3Po6V2EVoUZJqTtJcTEGPo4F7ae42XLw6d3QutREshrTMIYQDKK1mOro00eJhjQqLyQ==,iv:2AYJ63sFjMtVIe5v5HSVIc/ykNc6wwadcp7mOgQOr+8=,tag:NBJWq8cqvnN1CXqZ7mx43Q==,type:str]
+    #ENC[AES256_GCM,data:4bzbZ15jZxjJDQ==,iv:aspjQygFvQV+Z+3qA7/oDotyD0Sg/N2pvmUw/Z+PyQk=,tag:3FtBKP/w6/XkwGVMxW9ccQ==,type:comment]
+    password: ENC[AES256_GCM,data:LmGZnn6IUmugvBD1IhThzkTz+cZyp8IPO0qOq7O+Bnw=,iv:6eZ4v6ag7mWUl7ThzjKBbmXXDeZsboDAXBOUKYB08GY=,tag:crlBqqcCy+yhi1wMzZ/Uww==,type:str]
+    #ENC[AES256_GCM,data:arUpEV3+GA==,iv:tBcUjqAtCDYq2PkBkBRWAcubH5w3a1bXkmvrErxqTS4=,tag:YDeTaxomVxzrWb5+ujjchA==,type:comment]
+    redis-password: ENC[AES256_GCM,data:GithCzrGTjS7S5E6k6Y6/8742cCRZ6kL02JJSprO3D0=,iv:mhli6kQ7an+iKzaH7qGQKpmGgPsBhRU+qoeI6+BHzgw=,tag:JzV7kbAwOF8a19hVgcEDsA==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age19jc9zp5pc7me0wkx28kc2ypr9qh6t9zphn3fdk63ae9dz9a2h5gsh4w866
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtbGZlRkRadHYwZFdDb1Zw
+            dHo0Q04xNVhVM0VKaldHVU9xQnpTV2JZZENjCmdnQXVubVFwK1dLU1lRZml1Q29G
+            MkVyZ0dBbFZjT1ZKa3VyNEtJdGJxbzQKLS0tIGtjeUFseUdIRWxKMGFFdzh5Q05o
+            Yy9nZnJxZHdwVlppY2hBYnhkNUY3Qk0KdnBzdRefcygeGuFLKlehD/ZRw3lYTBAx
+            LwQ17bpF7bk7IynFQRiB7mZ8Kqp6nLV6KmkssyK4isW7H65t5GG/Bw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-13T05:35:27Z"
+    mac: ENC[AES256_GCM,data:PfDBWWhdPLxyUA09soY4wdPADFbquGdyKtPNUzy+zOsz64bvATxkXbvUbYqYe9bHiW9uyAL0v7i1zgGDGO8hzdX82du1aecIVoYRk7J7L/yl73FEMahhPzs5vJMGhe57ssy8UQtgThzyEp/o/+8cl1w0GfW9J57yDIFgiYRrdJc=,iv:vgECJ/My7LPsqHWkZmiyUozyb/MroRIzcRVXL2L4rFI=,tag:TQ6C3U2wrzuwlziIyKJ7iQ==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
