--- a/kubernetes/apps/default/mastodon/secret.sops.yaml
+++ b/kubernetes/apps/default/mastodon/secret.sops.yaml
@@ -15,6 +15,7 @@ stringData:
     VAPID_PUBLIC_KEY: ENC[AES256_GCM,data:n7r3UlhtlueZMOGorecbtrUrZL/R7XavqqjVuXDuG0MCcSsvrcB3Po6V2EVoUZJqTtJcTEGPo4F7ae42XLw6d3QutREshrTMIYQDKK1mOro00eJhjQqLyQ==,iv:2AYJ63sFjMtVIe5v5HSVIc/ykNc6wwadcp7mOgQOr+8=,tag:NBJWq8cqvnN1CXqZ7mx43Q==,type:str]
     #ENC[AES256_GCM,data:4bzbZ15jZxjJDQ==,iv:aspjQygFvQV+Z+3qA7/oDotyD0Sg/N2pvmUw/Z+PyQk=,tag:3FtBKP/w6/XkwGVMxW9ccQ==,type:comment]
     postgres-password: ENC[AES256_GCM,data:cvaDaf/VbBCDe7MhyESx4q4OcHrnZf9SeSV4oZBPO/o=,iv:BJJAuWdtInjCZgHFddnVg0yEwYJ2nGD3mlkQ1Eyn6fg=,tag:z/nKjd5X0N9ZVgEipYoXkQ==,type:str]
+    password: ENC[AES256_GCM,data:gwWm63DluKu3BElKbN+k8GI2dphMunDdq6+Q3RkFhJs=,iv:djdO3CEznBcBvXderrrDAjEJolDNk9yYpWEXt9LB5d8=,tag:QrFcqqoNyK/Q5ZoXNpfrRA==,type:str]
     #ENC[AES256_GCM,data:arUpEV3+GA==,iv:tBcUjqAtCDYq2PkBkBRWAcubH5w3a1bXkmvrErxqTS4=,tag:YDeTaxomVxzrWb5+ujjchA==,type:comment]
     redis-password: ENC[AES256_GCM,data:GithCzrGTjS7S5E6k6Y6/8742cCRZ6kL02JJSprO3D0=,iv:mhli6kQ7an+iKzaH7qGQKpmGgPsBhRU+qoeI6+BHzgw=,tag:JzV7kbAwOF8a19hVgcEDsA==,type:str]
 sops:
@@ -32,8 +33,8 @@ sops:
             Yy9nZnJxZHdwVlppY2hBYnhkNUY3Qk0KdnBzdRefcygeGuFLKlehD/ZRw3lYTBAx
             LwQ17bpF7bk7IynFQRiB7mZ8Kqp6nLV6KmkssyK4isW7H65t5GG/Bw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-13T05:37:58Z"
-    mac: ENC[AES256_GCM,data:GaTs4N/2uHlY4jmEPMZjiQsTVjbCXrtXdyqw+VOEzt3L++6oM7IEk9BiNRpiU0ra9chdLKUsW3F9Bhw4vxfzZANrfSSPRFtpvHuzWIRFeVwLwn+SjMo16v9VCXCHdkxbmn1i3L6WivxXUTUCkxzpAuUMC32rYJIk+0iN4dyEWHA=,iv:bxYqSylyJjPE7stZj1LU68FLOPiOdLY464vzfx7CC+M=,tag:FQQsbSLr7FL8joMPYtObUQ==,type:str]
+    lastmodified: "2024-10-13T05:40:07Z"
+    mac: ENC[AES256_GCM,data:eVFRz9lewukTsXWm8TY7RNVqKG0b7aOfrRydV+Cf0mLbMngMNhhCCeLo1bCQVNBYKzNOoQt3G0pdADGprhcYuum9bUUJYln00bK/WQG735UZF6q31c98CPYIDGZDtDHE2kx4mfS3M2I2uciZ8U4/LZwS8EcXGK7qL9RDpAcMhU8=,iv:rmp1PHKpWiZLsAygdj5fQKxEtNBbw31EqgEmGQUkknw=,tag:9cPlzM6AJDVC9P63Xq1MHg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
