--- a/kubernetes/apps/default/mastodon/assets-pvc.yaml
+++ b/kubernetes/apps/default/mastodon/assets-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mastodon-pvc
+  name: mastodon-assets
   namespace: default
 spec:
   resources:
