--- a/kubernetes/apps/default/mastodon/kustomization.yaml
+++ b/kubernetes/apps/default/mastodon/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./pvc.yaml
+  - ./assets-pvc.yaml
+  - ./system-pvc.yaml
   - ./secret.sops.yaml
   - ./helm-chart.yaml
   - ./helm-release.yaml
