Add rocket chat

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -29,6 +29,7 @@ resources:
   - ./radarr-anime
   - ./sonarr-anime
   - ./mastodon
+  - ./rocketchat
 configMapGenerator:
   - name: general-dashboards
     namespace: default
