--- a/kubernetes/apps/default/rocketchat/secret.sops.yaml
+++ b/kubernetes/apps/default/rocketchat/secret.sops.yaml
@@ -9,6 +9,9 @@ stringData:
     mongodb-root-password: ENC[AES256_GCM,data:3XFic7jCI+UQSIPwm5wC8LhxL7GUlqiGaM44lnzAlvU=,iv:Z9Xz1VRsNnxzFmM6itLlsz+s8gwpio+OybEj/mfoxSU=,tag:XxizmldNf+T4Cz7hiWGx9w==,type:str]
     mongodb-metrics-password: ENC[AES256_GCM,data:VjoLhxCyZuW5reHJHa1YM0Km4U+4XHPJBftikouN1Ag=,iv:YWySlH3jCnykvv4Eza08OIsGYzOW4HvRVWeL53VN54g=,tag:7Bdh0u0CmJ8f5bkql7eyog==,type:str]
     mongodb-replica-set-key: ENC[AES256_GCM,data:Tu/c8Mq88LOGc/ReHu5doPuUHhSuNHBU3E6koTg0+Pk=,iv:7A3c2wd7A1CT6EjBXpwZ8SuAxy9+GdS5F2jJfmhs0Ng=,tag:zxkl8WIE3owMy+36OGrb6w==,type:str]
+    #ENC[AES256_GCM,data:yL63P/x72FMKpbM0cg==,iv:kIFrK06MHa5bkwdgI3KCRMBzFstiRriJ1/L+RCGlBkM=,tag:/Uzhp5o3Af9IXIn3ycAj8w==,type:comment]
+    mongo-uri: ENC[AES256_GCM,data:bJmrIJme70kdYJ3ZraEMquRyOxWk64LI9lX2jcQukbZTXrPpQQ8L+TWOn5XSErZKkKdfImSdHajXo8y1XdFlfLfZIB5AzyaqP16bJKH+,iv:x0JMxWkhnzmRKg3VO3fS4dlyWldrFgAVLBrIgwi2Ua4=,tag:y+6MgrlONzKEYvHmSXk/vw==,type:str]
+    mongo-oplog-uri: ENC[AES256_GCM,data:xeIeg14GP64pyjkZzPrYV2Qg2QDyNb9Lddg8bqH+Qc6xnayg2Pz8YCJg7GiGQSiA9zXKGURDIIRLJDs397R46tXTl/i5ffPLjgXqtoz8mscsbnRsKx36daEpEiHOX19dRtfz,iv:jt+VHAm2dTZXC7rXbr4ujUpfwlDqvssuBO1YfeyLU/c=,tag:O7yW9mHKzWvQu2dubLvQrw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,8 +27,8 @@ sops:
             UFpDN0J1aEpTcTc4Y0YzYU5FV2xja0UKrzS2NN661YNbWQhIVe8JGooar4pBfNnK
             QzkU5WdjY3vScK4OEKgwZn2nmKrZ3kZ1adXfJjsSa8VFZ/tQ+CLuDA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-13T16:09:48Z"
-    mac: ENC[AES256_GCM,data:0cEjVuZdJOqcMz2+i3s0j+wBTdiYf+UwxlTrHnlCKHZbPqZcEXZxLiX0mGCd4OVABorF8fLC17v7M1XuHXAk01T1SrkKltI0f4ECONZ8PFvMgKJAvM+y8CNbxc7yujlaM9nbWMW8DOc+ZKmIlB5RiO+mC7iZ22HCgKaVSdjBCfw=,iv:4W4U5kagtwEc0eoQGthG5sq8Nm2AW9DlmcBh4Qyc00w=,tag:fXQ5h8PKfynAmJ9Hu4CEQA==,type:str]
+    lastmodified: "2024-10-13T16:19:01Z"
+    mac: ENC[AES256_GCM,data:zf1XxOizO/szksfpRmsPXSdoWPlRcjlc8i1K1VokeSzbEsYTkln9pQ7b3Y2qSh0p+K2yOPTno6ehSlMu2b7HgkNgGFwUuWfQyIYCgVqC7xz+APgeYK6KfYCxv92ifg0IV3qUGkLnKwKwuk5XyILPkUSit0VyyukRt9nW+LBeGI8=,iv:NQW6hDA5n2U13cm1jGUo7UY/hdZUmix7CWakIEqk5ug=,tag:bIrG7+BeCR4JSOi2TVa5Iw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
