Add rocket chat

--- a/kubernetes/apps/default/rocketchat/rocket-chat.yaml
+++ b/kubernetes/apps/default/rocketchat/rocket-chat.yaml
@@ -117,7 +117,7 @@ spec:
         databases:
           - rocketchat
         existingSecret: mongodb-secret
-        passwords: []
+        passwords: [empty]
         usernames:
           - rocketchat
       enabled: true
