--- a/kubernetes/apps/default/rocketchat/rocket-chat.yaml
+++ b/kubernetes/apps/default/rocketchat/rocket-chat.yaml
@@ -38,7 +38,7 @@ spec:
       enabled: true
       federation:
         serveWellKnown: false
-      ingressClassName: internal
+      ingressClassName: external
       path: /
       pathType: Prefix
       tls:
