--- a/kubernetes/apps/default/mastodon/helm-release.yaml
+++ b/kubernetes/apps/default/mastodon/helm-release.yaml
@@ -45,3 +45,8 @@ spec:
     redis:
       auth:
         existingSecret: mastodon-secret
+      master:
+        persistence:
+          enabled: true
+          storageClass: nfs-client-ssd
+          size: 1Gi
