--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -28,7 +28,7 @@ resources:
   - ./adguard
   - ./radarr-anime
   - ./sonarr-anime
-  - ./mastodon
+#  - ./mastodon
   - ./rocketchat
 configMapGenerator:
   - name: general-dashboards
