--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -30,6 +30,7 @@ resources:
   - ./sonarr-anime
 #  - ./mastodon
   - ./rocketchat
+  - ./uptime-kuma
 configMapGenerator:
   - name: general-dashboards
     namespace: default
