Uninstall tracing apps

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -22,7 +22,7 @@ resources:
   - ./doplarr
 #  - ./autobrr
 #  - ./nzbget
-  - ./otel-collector.yaml
+#  - ./otel-collector.yaml
 #  - ./homepage
   - ./qbittorrent
   - ./adguard
