--- a/kubernetes/apps/default/adguard/external-service.yaml
+++ b/kubernetes/apps/default/adguard/external-service.yaml
@@ -1,13 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: adguard
+  name: adguard-proxy
   namespace: default
+  labels:
+    app: adguard-proxy
 spec:
   externalName: adguard.stiforr.com
   type: ExternalName
   ports:
-    - port: 443
-      name: https
+    - port: 80
+      targetPort: 968
+      name: metrics
       protocol: TCP
       appProtocol: https
