--- a/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
+++ b/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
@@ -32,7 +32,7 @@ spec:
         containers:
           main:
             image:
-              repository: stiforr/tubearchivist
+              repository: bbilly1/tubearchivist
               tag: unstable
               pullPolicy: Always
             env:
