--- a/kubernetes/flux/repositories/oci/tautulli.yaml
+++ b/kubernetes/flux/repositories/oci/tautulli.yaml
@@ -1,12 +1,9 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: OCIRepository
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
 metadata:
   name: tautulli
   namespace: flux-system
 spec:
   interval: 6h0m0s
-  provider: generic
-  ref:
-    tag: 20.2.1
   url: oci://tccr.io/truecharts/tautulli
