--- a/kubernetes/flux/repositories/oci/tautulli.yaml
+++ b/kubernetes/flux/repositories/oci/tautulli.yaml
@@ -5,5 +5,6 @@ metadata:
   name: tautulli
   namespace: flux-system
 spec:
+  type: oci
   interval: 6h0m0s
   url: oci://tccr.io/truecharts/tautulli
