Install tautulli using app-template

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - ./nfs-subdir-external-ssd
   - ./tubearchivist
 #  - ./plex
-#  - ./tautulli
+  - ./tautulli
   - ./radarr
   - ./prowlarr
   - ./filebrowser
