--- a/kubernetes/apps/flux-system/capacitor/app/ks.yaml
+++ b/kubernetes/apps/flux-system/capacitor/app/ks.yaml
@@ -14,6 +14,7 @@ spec:
   sourceRef:
     kind: OCIRepository
     name: capacitor
+    namespace: flux-system
   patches:
     - patch: |
         apiVersion: rbac.authorization.k8s.io/v1
