New bootstrap. Add two controller nodes

--- a/kubernetes/apps/kube-system/spegel/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/spegel/app/helmrelease.yaml
@@ -25,6 +25,6 @@ spec:
       name: spegel-helm-values
   values:
     grafanaDashboard:
-      enabled: false
+      enabled: true
     serviceMonitor:
       enabled: true
