--- a/kubernetes/apps/kube-system/kubelet-csr-approver/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/kubelet-csr-approver/app/helm-values.yaml
@@ -1,3 +1,3 @@
 ---
-providerRegex: ^(controller|worker)$
+providerRegex: ^(controller|controller-2|controller-3|worker)$
 bypassDnsResolution: true
