--- a/kubernetes/apps/network/k8s-gateway/app/helmrelease.yaml
+++ b/kubernetes/apps/network/k8s-gateway/app/helmrelease.yaml
@@ -21,13 +21,6 @@ spec:
     remediation:
       retries: 3
   values:
-    image:
-      registry: quay.io
-      repository: oriedge/k8s_gateway
-      tag: v0.4.0
-      pullPolicy: IfNotPresent
-    customLabels:
-      k8s-app: k8s-gateway
     fullnameOverride: k8s-gateway
     domain: "${SECRET_DOMAIN}"
     ttl: 1
@@ -37,4 +30,4 @@ spec:
       annotations:
         io.cilium/lb-ipam-ips: "192.168.1.203"
       externalTrafficPolicy: Cluster
-    watchedResources: ["Ingress", "Service", "HTTPRoute"]
+    watchedResources: ["Ingress", "Service"]
