--- a/kubernetes/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/bootstrap/talos/talconfig.yaml
@@ -43,6 +43,40 @@ nodes:
       - "@./patches/controller/cluster.yaml"
       - "@./patches/controller/disable-admission-controller.yaml"
       - "@./patches/controller/etcd.yaml"
+  - hostname: "controller-2"
+    ipAddress: "192.168.1.174"
+    installDisk: "/dev/sda"
+    talosImageURL: factory.talos.dev/installer/ce4c980550dd2ab1b17bbf2b08801c7eb59418eafe8f279833297925d67c7515
+    controlPlane: true
+    networkInterfaces:
+      - deviceSelector:
+          hardwareAddr: "bc:24:11:4b:4c:4a"
+        dhcp: false
+        addresses:
+          - "192.168.1.174/24"
+        routes:
+          - network: 0.0.0.0/0
+            gateway: "192.168.1.254"
+        mtu: 1500
+        vip:
+          ip: "192.168.1.201"
+  - hostname: "controller-3"
+    ipAddress: "192.168.1.176"
+    installDisk: "/dev/sda"
+    talosImageURL: factory.talos.dev/installer/ce4c980550dd2ab1b17bbf2b08801c7eb59418eafe8f279833297925d67c7515
+    controlPlane: true
+    networkInterfaces:
+      - deviceSelector:
+          hardwareAddr: "bc:24:11:7c:9c:af"
+        dhcp: false
+        addresses:
+          - "192.168.1.176/24"
+        routes:
+          - network: 0.0.0.0/0
+            gateway: "192.168.1.254"
+        mtu: 1500
+        vip:
+          ip: "192.168.1.201"
   - hostname: "worker"
     ipAddress: "192.168.1.171"
     installDisk: "/dev/sda"
@@ -74,6 +108,6 @@ controlPlane:
   patches:
     - "@./patches/controller/api-access.yaml"
     - "@./patches/controller/cluster.yaml"
-#    - "@./patches/controller/disable-admission-controller.yaml"
+    - "@./patches/controller/disable-admission-controller.yaml"
     - "@./patches/controller/etcd.yaml"
 
