--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,10 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:cFVkArxtwTs3TFU=,iv:U+dtMKclgtL4Zn+nzqwLm91QcykeSXAbD1cVEJH9wj4=,tag:siLylQaV01hZX6vCzadhdQ==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:umFVEQYeClbFMxNjoV4W/tkx3G/8tA==,iv:M4sy3fiDQls3wGJc6ynhAJuYdjsHgM96220pzffjIok=,tag:RAaje5Bvu2OZAT7qBObBxw==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:aTcDphHM2rIWJgHtpXG9nimuPqwgjm495s8g4qW6I2fwW+L8,iv:WuF8fRqUORdIB7aaDnXvivJMf44EXN6h3csJugCTXsU=,tag:ZYmhJ/Qh8BS3YZgv6KccmA==,type:str]
-    INFLUXDB_API_TOKEN: ENC[AES256_GCM,data:MCVqfIg8RXa/1urjVaeZ7kCW2Nmo1Sjzw3v6z2M36sJWmxEQFMDIALONRufu88/2uyjDYgbURdDSNgkakdZMfCcAB52QBs8fsHBRUAtVXizevhuo50rrGg==,iv:fZnvnMa6yqETY0yqD6ZUEzch8kD3PFPACHs/bD+K7Fs=,tag:AeZIaHd/07lpTY8rPDXraA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:o9oPJiXRwM662Ic=,iv:itF7WD1B29OdXkQDR5LZEfrZjF7xclpIbveiGBJEshs=,tag:Z6eUXnpJElJVsCisVi8AVg==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:jSU0is/Vtc5vUtM71v95oUIvt7JTqg==,iv:Es2BpvqJXrEYN+lj+DATfDWPkPnc+QvE0+MedAFvZxY=,tag:1rSAoX4LeAlC+J88rnFPEw==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:3zPcKDPvMA7GZjB6s9fH0nk0pm54A5chmrxx1QfwOq5Xd2I/,iv:Rs/QKk2AHG+Bk9FTw/bqkL5mP4Elq1D93EkCk3Jcdwg=,tag:B13iPNkKsMmDdQYP7w75CQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +16,14 @@ sops:
         - recipient: age19jc9zp5pc7me0wkx28kc2ypr9qh6t9zphn3fdk63ae9dz9a2h5gsh4w866
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3VWlOYndwVE1SUVBXNEc5
-            MktJcmNxaTRPVWZxR01ZZWlXR2VPV3RocVc4CjNHSHppWXk5TnkyT0dPaVk2Tzg4
-            MmtCc0JackNRRS9GK3V3WmtFR2VKZXMKLS0tIDFTL1hwWjQycC9iL09HZ3pROWEr
-            emJvRzVZWGNQOU5ySjdaN3ZIcUNFRzgKyWaoVuZgc6ndqDpKiEcMyYcWcHbgDxy+
-            7PgDn1Tf18qCiLWnyvAuybybQ3nUzxxGTAnYZJ+2mlCW5J00uYsHEg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVM2t2a2w0dDJFbm5HUWYx
+            OER5REF4aGRVOGtTZXpxSVMya0dGdU9ZQURnCmdCbWV2SDM4elRvVmhDZGRBVXp3
+            SlZqdVZ3QTBiY3RNeFpKVEV3c1RNOG8KLS0tIFFhZldMaTFNZlg1UzN6TkxuQWVT
+            ZEdjNFQ0d0ZndzYrcDA4a2J0endBbFEKKJHEJKccpP9VqLNA4YiNhcI1z6C597rf
+            qRCsOh0d7LL5lHe+iT9rjea6Suqphg8yXiqR92dVnErrzZZoTdScKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-01T20:58:07Z"
-    mac: ENC[AES256_GCM,data:ri2/RIVLuo1cTb4nFiGYm2EOiqo9ibSM2ijp0RhVmTlqCaROwdMzff/pBUr/jcGvqvfkx9fn9ZDIMLh+2iKddcZOj3+8bjVWO4vANI3DwDjPMKxE78ty7tGaiuO03H8BVAyIaHQtUHD2J4bUbngY7kaAVPj8H1tNh0dVvHMIa54=,iv:uHVo76ehsGiuVegVym0fAtW48/KIpQZ41HsHDs9z3lU=,tag:lRSSHpmH7+KtRXcp5wSWgQ==,type:str]
+    lastmodified: "2024-10-17T15:28:40Z"
+    mac: ENC[AES256_GCM,data:4Fliy8eS0UVlDM5cqrTQKHB99MvcEBbUQJNz524QKHlouosgqPetCa5Lc8sEMi6APVgMlIq4ocPxjA0kFjwCC8BYNVel50QngTt32Zr8Y3Pif8KFmy+KWiajJ5tGi4uZ6JkkaRXjJR9MwqlRJetKEgDKsRZboMrGY+w1xx3/+80=,iv:XWkwHGOboks+3ziqGr4g0L1QcoiTqTLlGLioahgnGHs=,tag:qwaCWANWP1yZGsBpvfj9sw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.9.0
+    version: 3.9.1
