New bootstrap. Add two controller nodes

--- a/kubernetes/bootstrap/talos/clusterconfig/.gitignore
+++ b/kubernetes/bootstrap/talos/clusterconfig/.gitignore
@@ -2,3 +2,4 @@ home-kubernetes-controller.yaml
 talosconfig
 home-kubernetes-controller-2.yaml
 home-kubernetes-worker.yaml
+home-kubernetes-controller-3.yaml
