--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:o9oPJiXRwM662Ic=,iv:itF7WD1B29OdXkQDR5LZEfrZjF7xclpIbveiGBJEshs=,tag:Z6eUXnpJElJVsCisVi8AVg==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:jSU0is/Vtc5vUtM71v95oUIvt7JTqg==,iv:Es2BpvqJXrEYN+lj+DATfDWPkPnc+QvE0+MedAFvZxY=,tag:1rSAoX4LeAlC+J88rnFPEw==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:3zPcKDPvMA7GZjB6s9fH0nk0pm54A5chmrxx1QfwOq5Xd2I/,iv:Rs/QKk2AHG+Bk9FTw/bqkL5mP4Elq1D93EkCk3Jcdwg=,tag:B13iPNkKsMmDdQYP7w75CQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:VTMORDnOVs/AiGw=,iv:iPwzNmBzu2d+s47c9Zr3f5mlgvo6uzTh3x6W2KxIZcg=,tag:Oc19gPA1IAqZ7HKdkL65vw==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:eKkneB85IoCjtqsmPAiPNoX+1kM/Hg==,iv:aI8AdckKc/BcuTSOPRie+qoo3G4xXmcWqAubgOaJTRk=,tag:n1+Z8pH+lDsdzbB9JhxhhA==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:buBQYxNnZuqqomzjTNn1N89Y3p/yFuAy420p4RzTgBKkCamY,iv:lgGwG61F46GpgPvvhuvhJnqsEglGxa0laqjsJybHmoM=,tag:IwZ7M/PqjpvFhl037neuAg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age19jc9zp5pc7me0wkx28kc2ypr9qh6t9zphn3fdk63ae9dz9a2h5gsh4w866
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVM2t2a2w0dDJFbm5HUWYx
-            OER5REF4aGRVOGtTZXpxSVMya0dGdU9ZQURnCmdCbWV2SDM4elRvVmhDZGRBVXp3
-            SlZqdVZ3QTBiY3RNeFpKVEV3c1RNOG8KLS0tIFFhZldMaTFNZlg1UzN6TkxuQWVT
-            ZEdjNFQ0d0ZndzYrcDA4a2J0endBbFEKKJHEJKccpP9VqLNA4YiNhcI1z6C597rf
-            qRCsOh0d7LL5lHe+iT9rjea6Suqphg8yXiqR92dVnErrzZZoTdScKA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLRjNSaXp3aXNUZUp1QWtq
+            QzQxR0xTWVY3bVN0VzlSRllLcHl2dm9CSm1BCnYrWkNuaE9RSU9VYi83dm1BTzNO
+            WG04SFJJSmxSTVV5R0ZFQlZ4ajVyWkEKLS0tIHZiVkY4a2MzZTYrYjRRcUJMZ2R2
+            VDVTMDVIcjZpTW5HZmUxay9vcjNpbUUKyjGqdsJUJkV3T9bE4piWUJ3CEC6aTXG5
+            /AuBW9Qn/uQ770F2B6Z7Hdv+zJdswJulLB7qkTM3SSVe5n9AxUBjAg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-17T15:28:40Z"
-    mac: ENC[AES256_GCM,data:4Fliy8eS0UVlDM5cqrTQKHB99MvcEBbUQJNz524QKHlouosgqPetCa5Lc8sEMi6APVgMlIq4ocPxjA0kFjwCC8BYNVel50QngTt32Zr8Y3Pif8KFmy+KWiajJ5tGi4uZ6JkkaRXjJR9MwqlRJetKEgDKsRZboMrGY+w1xx3/+80=,iv:XWkwHGOboks+3ziqGr4g0L1QcoiTqTLlGLioahgnGHs=,tag:qwaCWANWP1yZGsBpvfj9sw==,type:str]
+    lastmodified: "2024-10-17T18:55:05Z"
+    mac: ENC[AES256_GCM,data:rLum/lok3gHwGx/x6691kSzviBKJ8FVdiy1bsf160RdTYJBCilJGQcMOXA1DUtojzUtNbyk3Mh8thzWaXtzu2HKTD5aq9GK+T2kN5wY/Wgk6M0VJ8a0FHoP2uNijnmLDwp+7nGk3bnGU2jHR7Vx33vlRFkk9Sc+/zsQwO3yF5mI=,iv:IEumrPgCce+hqPlrYFX2gTCbNBc16FfJr8MsPxw9ZUY=,tag:lSlpHvHLiQBf6BYoMbeeww==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
