--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -63,7 +63,11 @@ spec:
                 - hubble.internal.${SECRET_DOMAIN}
       tls:
         auto:
-          method: cronJob
+          method: certmanager
+          certManagerIssuerRef:
+            group: cert-manager.io
+            kind: ClusterIssuer
+            name: ca-issuer
     operator:
       prometheus:
         enabled: true
