Add cert manager cluster issuer for hubble mtls

--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -63,11 +63,12 @@ spec:
                 - hubble.internal.${SECRET_DOMAIN}
       tls:
         auto:
+          enabled: true
           method: certmanager
           certManagerIssuerRef:
             group: cert-manager.io
             kind: ClusterIssuer
-            name: ca-issuer
+            name: my-ca-issuer
     operator:
       prometheus:
         enabled: true
