Add cert manager cluster issuer for hubble mtls

--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -68,7 +68,7 @@ spec:
           certManagerIssuerRef:
             group: cert-manager.io
             kind: ClusterIssuer
-            name: my-ca-issuer
+            name: ca-issuer
     operator:
       prometheus:
         enabled: true
