Add cert manager cluster issuer for hubble mtls

--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -67,7 +67,7 @@ spec:
           method: certmanager
           certManagerIssuerRef:
             group: cert-manager.io
-            kind: ClusterIssuer
+            kind: Issuer
             name: ca-issuer
     operator:
       prometheus:
