--- a/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
@@ -37,6 +37,9 @@ ingressController:
   defaultSecretNamespace: network
   defaultSecretName: stiforr-com-production-tls
   loadbalancerMode: shared
+  service:
+    annotations:
+      io.cilium/lb-ipam-ips: 192.168.1.205
 clustermesh:
   useAPIServer: false
 ipam:
