Upgrade cilium chart

--- a/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
@@ -31,6 +31,7 @@ envoy:
     enabled: true
     serviceMonitor:
       enabled: true
+l7Proxy: true
 ingressController:
   enabled: true
   default: false
