--- a/kubernetes/apps/default/plex/plex.yaml
+++ b/kubernetes/apps/default/plex/plex.yaml
@@ -55,7 +55,7 @@ spec:
         cert-manager.io/cluster-issuer: letsencrypt-production
         nginx.ingress.kubernetes.io/service-upstream: "false"
       enabled: true
-      ingressClassName: internal
+      ingressClassName: cilium
       url: plex.internal.${SECRET_DOMAIN}
     pms:
       configExistingClaim: "media-pvc-ssd"
