--- a/kubernetes/apps/default/sonarr/sonarr.yaml
+++ b/kubernetes/apps/default/sonarr/sonarr.yaml
@@ -77,7 +77,7 @@ spec:
           nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
           nginx.ingress.kubernetes.io/otel-service-name: sonarr
           nginx.ingress.kubernetes.io/service-upstream: "false"
-        className: internal
+        className: cilium
         enabled: true
         hosts:
           - host: sonarr.internal.${SECRET_DOMAIN}
