--- a/kubernetes/apps/default/bazarr/bazarr.yaml
+++ b/kubernetes/apps/default/bazarr/bazarr.yaml
@@ -68,7 +68,7 @@ spec:
           nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
           nginx.ingress.kubernetes.io/otel-service-name: bazarr
           nginx.ingress.kubernetes.io/service-upstream: "false"
-        className: internal
+        className: cilium
         enabled: true
         hosts:
           - host: bazarr.internal.${SECRET_DOMAIN}
