--- a/kubernetes/apps/default/mastodon/helm-release.yaml
+++ b/kubernetes/apps/default/mastodon/helm-release.yaml
@@ -34,7 +34,7 @@ spec:
       enabled: true
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
-      ingressClassName: internal
+      ingressClassName: cilium
       hosts:
         - host: mastodon.internal.${SECRET_DOMAIN}
           paths:
