--- a/kubernetes/apps/default/nzbget/nzbget.yaml
+++ b/kubernetes/apps/default/nzbget/nzbget.yaml
@@ -42,7 +42,7 @@ spec:
       nzbget:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
-        className: internal
+        className: cilium
         enabled: true
         hosts:
         - host: nzbget.internal.${SECRET_DOMAIN}
