--- a/kubernetes/apps/default/prowlarr/prowlarr.yaml
+++ b/kubernetes/apps/default/prowlarr/prowlarr.yaml
@@ -66,7 +66,7 @@ spec:
           nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
           nginx.ingress.kubernetes.io/otel-service-name: prowlarr
           nginx.ingress.kubernetes.io/service-upstream: "false"
-        className: internal
+        className: cilium
         enabled: true
         hosts:
           - host: prowlarr.internal.${SECRET_DOMAIN}
