--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -31,11 +31,11 @@ spec:
         enabled:
           - dns:query;labelsContext=source_namespace,destination_namespace
           - drop
-          - tcp
+          - tcp:destinationContext=dns|ip;sourceContext=dns|ip;labelsContext=source_ip,source_namespace,source_workload,destination_ip,destination_namespace,destination_workload,traffic_direction
           - flow:destinationContext=dns|ip;sourceContext=dns|ip;labelsContext=source_ip,source_namespace,source_workload,destination_ip,destination_namespace,destination_workload,traffic_direction
           - port-distribution
           - icmp
-          - httpV2:exemplars=true;destinationContext=dns|ip;sourceContext=dns|ip;labelsContext=source_ip,source_namespace,source_workload,destination_ip,destination_namespace,destination_workload,traffic_direction
+          - httpV2:destinationContext=dns|ip;sourceContext=dns|ip;labelsContext=source_ip,source_namespace,source_workload,destination_ip,destination_namespace,destination_workload,traffic_direction
         serviceMonitor:
           enabled: true
         dashboards:
