--- a/kubernetes/apps/default/sonarr/sonarr.yaml
+++ b/kubernetes/apps/default/sonarr/sonarr.yaml
@@ -20,6 +20,8 @@ spec:
   values:
     controllers:
       main:
+        annotations:
+          reloader.stakater.com/auto: "true"
         containers:
           exportarr:
             enabled: true
